[workspace]
members = [
    "crates/api",
    "crates/apub"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A chat platform for the fediverse"
license = "GPL-3.0-or-later"
repository = "https://github.com/foirst/monrst"

[package]
name = "monrst"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
dependencies.workspace = true

[dependencies]
rocket = "=0.5.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }