[workspace]
members = [
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A chat platform for the fediverse"
license = "GPL-3.0-or-later"
repository = "https://github.com/foirst/monrst"

[package]
name = "monrst"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
dependencies.workspace = true

[workspace.dependencies]
monrst_api = { version = "=0.1.0", path = "./crates/api" }

rocket = "=0.5.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies]
monrst_api = { workspace = true }

anyhow = "1"
futures-util = "0.3"
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-websockets = { version = "*", default-features = false, features = ["server", "getrandom", "simd", "rustls-webpki-roots"] }
uuid = { workspace = true }