[workspace]
members = [
    "api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A chat platform for the fediverse"
license = "GPL-3.0-or-later"
repository = "https://github.com/foirst/monrst"

[package]
name = "monrst"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.dependencies]
monrst_api = { version = "=0.1.0", path = "./api" }

anyhow = "1"
async-std = { version = "1", features = ["attributes"]}
async-trait = "0.1"
async-tungstenite = "0.22"
derive_more = "0.99"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
querystring = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin = { version = "0.9", features = ["lazy"] }
systemd-journal-logger = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies]
monrst_api = { workspace = true }

anyhow = { workspace = true }
async-std = { workspace = true }
async-tungstenite = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
querystring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin = { workspace = true }
systemd-journal-logger = { workspace = true }
uuid = { workspace = true }