[package]
name = "monrst_api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
spin = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }